# marie

./: CLAUDE.md  Cargo.toml  README.md
marie/: Cargo.toml
marie-axum/: Cargo.toml
marie-axum/src/: gateway.rs  lib.rs  protocol.rs  ws.rs
marie-core/: Cargo.toml
marie-core/migrations/: 0001_fs_alias.sql  0001_session.sql  0002_fs_inode.sql  0002_model.sql  0003_session.sql  0004_state_graph.sql  0004_workspace.sql  0005_model.sql  0005_tool.sql  0006_model_key_epoch.sql  0006_tool.sql  0007_expert.sql  0007_workspace.sql  0008_fs_object.sql  0008_state_graph.sql  0009_fs_inode.sql  0010_fs_alias.sql
marie-core/src/: annuary.rs  client.rs  condition.rs  di.rs  id.rs  layer.rs  lib.rs  node.rs  secret.rs  sink.rs  state.rs
marie-core/src/agent/: context.rs  frame.rs  mod.rs  status.rs
marie-core/src/expert/: client.rs  declaration.rs  mod.rs  model.rs  rpc.rs  server.rs
marie-core/src/expert/catalog/: mod.rs  store.rs
marie-core/src/graph/: checkpoint.rs  edge.rs  graph.rs  mod.rs  node.rs  server.rs
marie-core/src/hitl/: client.rs  mod.rs
marie-core/src/job/: mod.rs
marie-core/src/mode/: executable.rs  mod.rs  orchestration.rs
marie-core/src/mode/state_graph/: client.rs  declaration.rs  mod.rs
marie-core/src/mode/state_graph/catalog/: mod.rs  store.rs
marie-core/src/model/: client.rs  declaration.rs  mod.rs  model.rs  rpc.rs  server.rs
marie-core/src/model/catalog/: mod.rs  rotate.rs  store.rs
marie-core/src/network/: actor.rs  loopback.rs  mod.rs  mux.rs  peer.rs  protocol.rs  rpc.rs  swarm.rs
marie-core/src/network/bootstrap/: client.rs  mod.rs
marie-core/src/network/catalog/: mod.rs
marie-core/src/network/cp/: mod.rs  network.rs  rpc.rs  state.rs  types.rs
marie-core/src/network/cp/log_store/: backend.rs  mod.rs  redb_backend.rs
marie-core/src/network/persistency/: mod.rs
marie-core/src/network/worker/: client.rs  layers.rs  mod.rs  server.rs  watchdog.rs
marie-core/src/node/: mod.rs
marie-core/src/persistency/: alias.rs  filesystem.rs  inode.rs  mod.rs  postgres.rs  session.rs  store.rs  var.rs  vfs.rs  workspace.rs
marie-core/src/pubsub/: layer.rs  layers.rs  mod.rs
marie-core/src/rpc/: client.rs  event.rs  layers.rs  mod.rs  register.rs  router.rs  server.rs  typed.rs
marie-core/src/schema/: mod.rs  model.rs
marie-core/src/session/: client.rs  crdt.rs  layers.rs  mod.rs  model.rs  rpc.rs  server.rs  store.rs  sync.rs  worker.rs
marie-core/src/session/catalog/: mod.rs
marie-core/src/session/state/: client.rs  declaration.rs  executable.rs  frame.rs  hitl.rs  mod.rs  orchestration.rs  rpc.rs  server.rs  worker.rs
marie-core/src/session/state/catalog/: mod.rs  store.rs
marie-core/src/session/store/: client.rs  mod.rs  postgres.rs  protocol.rs
marie-core/src/state_graph/: client.rs  declaration.rs  executable.rs  frame.rs  hitl.rs  mod.rs  orchestration.rs  rpc.rs  server.rs  worker.rs
marie-core/src/state_graph/catalog/: mod.rs  store.rs
marie-core/src/store/: mod.rs  postgres.rs
marie-core/src/tools/: builtin.rs  client.rs  declaration.rs  layers.rs  mod.rs  rpc.rs  server.rs  worker.rs
marie-core/src/tools/catalog/: mod.rs  store.rs
marie-core/src/vfs/: inode.rs  mod.rs  postgres.rs  var.rs  workspace.rs
marie-core/src/worker/: client.rs  layers.rs  mod.rs  protocol.rs  server.rs  watchdog.rs
marie-core/src/workspace/: client.rs  crdt.rs  layers.rs  mod.rs  model.rs  rpc.rs  server.rs  store.rs  sync.rs
marie-gateway/: Cargo.toml
marie-gateway/src/: lib.rs  protocol.rs
marie-leptos/: Cargo.toml
marie-leptos/src/: hitl_form.rs  lib.rs  session_panel.rs  state_graph_editor.rs  types.rs
marie-test/: Cargo.toml
marie-test/src/: lib.rs
marie-test/tests/: crdt.rs  secret_rotation.rs  session_store.rs  workspace_store.rs
marie-web-example/: Cargo.toml
marie-web-example/assets/: style.css
marie-web-example/src/: api.rs  app.rs  dto.rs  hitl_upload.rs  lib.rs  main.rs  ws_client.rs
marie-web-example/src/components/: chat_view.rs  config_panel.rs  mod.rs
marie-ws/: Cargo.toml
marie-ws/src/: layer.rs  lib.rs  protocol.rs
marie/src/: lib.rs
