[workspace]
resolver = "2"
members = [
    "marie-core", 
    "marie-test", 
    "marie", 
    "marie-leptos", 
    "marie-axum", 
    "marie-web-example"
, "marie-gateway"]

[workspace.dependencies]
serde = "1.0.228"
serde_json = "1.0.150"
futures-util = { version = "0.3.32", features = ["sink"] }
tokio = { version = "1.52.3", features = ["sync"] }