[workspace]
resolver = "2"
members = [
    "marie", 
    "marie-core", 
    "marie-test", 
    "marie-leptos", 
    "marie-axum", 
    "marie-web-example", 
    "marie-gateway", 
    "marie-ws"
]

[workspace.dependencies]
serde = "1.0.228"
serde_json = "1.0.150"
futures-util = { version = "0.3.32", features = ["sink"] }
tokio = { version = "1.52.3", features = ["sync"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
async-stream = "0.3.6"
futures = "0.3"
axum = { version = "0.8", features = ["ws"] }
anyhow = "1.0.102"
gloo-net = "0.7.0"
schemars = "0.8"
json-patch = "4.2.0"
jsonpath-rust = "1.0.6"
jsonschema = "0.48.5"