[package]
name = "marie-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
marie-core = { path = "../marie-core" }

axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["sync", "rt", "macros"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
futures = "0.3"
async-stream = "0.3.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
anyhow = "1.0.102"
tracing = "0.1"

# Backends du VFS de session (voir `MarieGateway::session_client`) — mêmes
# versions que `marie-core`, pour rester compatible avec les types qu'elle
# expose en surface publique (`PgPool`, `Arc<dyn ObjectStore>`).
object_store = { version = "0.14.0", features = ["aws"] }
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "tls-rustls-ring", "postgres"] }
