[package]
name = "marie-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
thiserror = "2.0"
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
rand_xoshiro = "0.8.1"
getrandom = { version = "0.2", features = ["js"] }
bytemuck = { version = "1.14", features = ["derive"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
reqwest-sse = "0.1.0"
tokio-stream = { version = "0.1.18", features = ["sync"] }
async-stream = "0.3.6"
tracing = "0.1"
strum = "0.26"
strum_macros = "0.26"
loro = "1.13.7"
parking_lot = "0.12.5"
sysinfo = "0.30"
# Network
libp2p = { version = "0.56.0", 
    features = [
        "serde",
        "gossipsub", 
        "mdns", 
        "identify",
        "tcp", 
        "noise", 
        "yamux",
        "tokio", 
        "macros", 
        "request-response", 
        "rendezvous",
        "json", 
        "ed25519"
    ] 
}


# IA Model
async-openai = {version = "0.41.1", features = ["_api", "responses", "response-types", "chat-completion-types"]}

# Cryptography & Secrets
chacha20poly1305 = "0.10"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
ed25519-dalek = "2"
x25519-dalek = "2"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

typed-builder = "0.23.2"
object_store = { version = "0.14.0", features = ["aws"], optional = true }
sqlx = { version = "0.9", default-features = false, optional = true, features = ["runtime-tokio", "tls-rustls-ring", "postgres", "migrate", "macros", "json", "chrono"] }
bytes = { version = "1", optional = true }
futures-util.workspace = true
json-patch.workspace = true
jsonpath-rust.workspace = true
jsonschema.workspace = true
schemars.workspace = true


[dev-dependencies]
wiremock = "0.6.5"

[features]
default = ["client"]
# Connexion au réseau seule (`client::Client`) : RPC, gossipsub, bootstrap,
# secrets — les clients `*::client` de chaque domaine (session, workspace,
# model, expert). Aucune dépendance Postgres/S3.
client = []
# Rôle worker : exécute les jobs (`start_worker`/`start_watchdog`).
worker = ["client"]
# Rôle catalogue : sert les catalogues modèles/tools/experts/sessions/
# workspaces (`start_catalog`), adossés à Postgres — seule feature qui tire
# `sqlx`/`object_store`.
catalog = ["client", "dep:sqlx", "dep:object_store", "dep:bytes"]
# Raccourci pour démarrer un nœud complet (worker + catalogue).
node = ["worker", "catalog"]
rpc-server = []
rpc-executor = ["rpc-server"]
job-executor = []
worker-server = ["job-executor"]
worker-watchdog = []
model-server = ["rpc-executor"]
tools-server = ["rpc-executor"]
tool-executor = ["job-executor"]
postgres = []
