[package]
name = "marie-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
marie-core = { path = "../marie-core", default-features = false, features = ["client"] }
serde = { workspace = true, features = ["serde_derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
futures.workspace = true
chrono = { version = "0.4", features = ["serde"] }