[package]
name = "marie-test"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
marie-core = { path = "../marie-core" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"
anyhow = "1.0.102"
serde_json = "1.0.150"
yrs = { version = "0.27.2", features = ["sync"] }
